traefik/manifest/middleware-ipwhitelist.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ipwhitelist-main
spec:
  ipWhiteList:
    # https://en.wikipedia.org/wiki/Reserved_IP_addresses
    sourceRange:
      - "127.0.0.0/8"
      - "192.168.0.0/16"
      - "172.17.0.0/16"
      - "10.0.0.0/8"
