traefik/manifest/traefik-dashboard-http.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.dev.quadtreeworld.net`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
