traefik/manifest/traefik-dashboard-le.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.dev.quadtreeworld.net`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      # middlewares:
      #   - name: ipwhitelist-main
  tls:
    certResolver: letsencrypt
